2008-08-02	Chris Johns <chrisj@rtems.org>

	* libchip/i2c/spi-sd-card.c, libchip/ide/ata.c: Remove
	rtems_blkdev_request count and start references. Use
	RTEMS_BLKDEV_START_BLOCK.

2008-07-29	Chris Johns <chrisj@rtems.org>

	* libchip/i2c/spi-sd-card.c: Updated to the libblock changes.

	* libchip/ide/ata.c: Change to use a mutex rather than disable
	pre-emption. Updated to the libblock changes.

	* libchip/ide/ata_internal.h: Updated to the new chains API.

	* libchip/ide/ide_controller.c: Updated to the libblock
	changes. Added come debug tracing.

	* libchip/ide/ide_ctrl_cfg.h, libchip/ide/ide_ctrl_io.h: Updated
	to the libblock changes.

2008-07-27	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Remove RPCGEN, RPCTOOLS.

2008-07-21	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libchip/i2c/spi-sd-card.h, libchip/i2c/spi-sd-card.c: Use inttypes.h
	for output format specifiers.

2008-07-17	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* libchip/display/font_hcms29xx.h, libchip/display/disp_hcms29xx.h:
	Fixed some data types

2008-07-14	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libchip/i2c/spi-sd-card.c: Added missing header file.
	* libchip/Makefile.am: Added SD Card driver.

2008-07-14	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* libchip/display/font_hcms29xx.c, libchip/display/disp_fonts.h
	make glyphs non-constant, added file headers 

2008-07-09	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* libchip/display/disp_fonts.h, libchip/display/disp_hcms29xx.c
	* libchip/display/disp_hcms29xx.h, libchip/display/font_hcms29xx.c
	* libchip/display/font_hcms29xx.h
	Creation of SPI display driver

2008-07-09	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libchip/i2c/spi-sd-card.h, libchip/i2c/spi-sd-card.c: SD Card driver
	via SPI.

2008-06-29 	Ralf Corsépius <ralf.corsepius@rtems.org>

	* aclocal/rtems-top.m4: Require AC_DISABLE_OPTION_CHECKING.
	AC_PREREQ(2.62).
