@@ -35,10 +35,12 @@ GCCSPECS="-B\$(PROJECT_ROOT)/lib/ -B\$(PROJECT_ROOT)/$RTEMS_BSP/lib/"
 GCCSPECS="${GCCSPECS} -specs bsp_specs -qrtems"])
 AC_SUBST(GCCSPECS)
 
-if test "$GCC" = yes; then
+AS_IF([test "$GCC" = yes],[
 RTEMS_CFLAGS="$RTEMS_CFLAGS -Wall"
+# FIXME: This should be removed in production releases
+RTEMS_CFLAGS="$RTEMS_CFLAGS -Wimplicit-function-declaration -Wstrict-prototypes"
 m4_if([$1],,[],[RTEMS_CFLAGS="$RTEMS_CFLAGS $1"])
-fi
+])
 AC_SUBST(RTEMS_CFLAGS)
 
 AS_IF([test x"$rtems_cv_gcc_isystem" = xyes],[
