@@ -25,10 +25,12 @@ dnl check if the target compiler may use --pipe
 RTEMS_GCC_PIPE
 test "$rtems_cv_gcc_pipe" = "yes" && CC="$CC --pipe"
 
-if test "$GCC" = yes; then
+AS_IF([test "$GCC" = yes],[
 RTEMS_CFLAGS="$RTEMS_CFLAGS -Wall"
+# FIXME: This should be removed in production releases
+RTEMS_CFLAGS="$RTEMS_CFLAGS -Wimplicit-function-declaration -Wstrict-prototypes"
 m4_if([$1],,[],[RTEMS_CFLAGS="$RTEMS_CFLAGS $1"])
-fi
+])
 AC_SUBST(RTEMS_CFLAGS)
 
 RTEMS_CPPFLAGS="-I\$(top_builddir) -I\$(PROJECT_INCLUDE)"
